--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "jasmine-core": "2.8.0",
     "karma": "1.7.1",
     "karma-chrome-launcher": "2.2.0",
-    "karma-firefox-launcher": "1.0.1",
-    "karma-jasmine": "1.1.0",
-    "karma-phantomjs-launcher": "1.0.4",
-    "karma-safari-launcher": "1.0.0",
-    "typescript": "2.8.1",
-    "uglify-js": "3.1.6"
+    "karma-firefox-launcher": "1.1.0",
+    "karma-jasmine": "1.1.2",
+    "karma-mocha-reporter": "2.2.5",
+    "typescript": "3.1.3",
+    "uglify-js": "3.4.9"
   },
   "scripts": {
     "lint": "./node_modules/.bin/eslint --env browser,node './src/**/*.js'",
