--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,12 @@
   "compilerOptions": {
     "listFiles": true,
     "noEmit": true,
-    "noImplicitAny": true,
+    "noErrorTruncation": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
     "strict": true
   },
-  "files": [
-    "test/typings/identity-spec.ts",
-    "test/typings/maybe-spec.ts",
-    "test/typings/either-spec.ts",
-    "test/typings/validation-spec.ts",
-    "test/typings/list-spec.ts",
-    "test/typings/nel-spec.ts",
-    "test/typings/io-spec.ts",
-    "test/typings/reader-spec.ts",
-    "test/typings/free-spec.ts"
+  "include": [
+    "test/typings/*"
   ]
 }
