--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   ],
   "name": "monet",
   "description": "Monadic types library for JavaScript",
-  "version": "0.9.0-rc.1",
+  "version": "0.9.0-rc1-return-types",
   "homepage": "https://monet.github.io/monet.js/",
   "repository": {
     "type": "git",
-    "url": "git@github.com:monet/monet.js.git"
+    "url": "git@github.com:jleider/monet.js.git"
   },
   "main": "dist/monet.js",
   "typings": "dist/monet.d.ts",
