--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   ],
   "name": "monet",
   "description": "Monadic types library for JavaScript",
-  "version": "0.9.0-alpha.4-maybe-nonnullable",
+  "version": "0.9.0-alpha.4-return-types",
   "homepage": "https://monet.github.io/monet.js/",
   "repository": {
     "type": "git",
